# challenge2_videocalling_and_chat

./: .cursorrules  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  IMPLEMENTATION_EXAMPLE.md  MOBILE_SETUP.md  PROMPT_SYSTEM.md  README.md  ROADMAP.md
backend/: Cargo.toml
backend/src/: db.rs  main.rs
frontend/: package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  index.css
frontend/src/components/: ChatWindow.css  ChatWindow.js  IncomingCall.css  IncomingCall.js  LoginForm.css  LoginForm.js  OnlineUsers.css  OnlineUsers.js  VideoCall.css  VideoCall.js  VoiceRecorder.css  VoiceRecorder.js
